[gd_scene load_steps=3 format=3 uid="uid://dtoh1am0ml7nc"]

[ext_resource type="Script" path="res://Code/Scripts/combat_ui.gd" id="1_h1l8q"]
[ext_resource type="PackedScene" uid="uid://djtfkwskautj7" path="res://Level/UI/turn_indicator.tscn" id="2_maujg"]

[node name="Combat_UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h1l8q")

[node name="Center" type="Control" parent="."]
anchors_preset = 0
offset_left = 480.0
offset_top = 804.0
offset_right = 1440.0
offset_bottom = 1080.0

[node name="Actions" type="HBoxContainer" parent="Center"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 138.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Cancel" type="Panel" parent="Center"]
visible = false
layout_mode = 0
offset_left = 240.0
offset_top = 134.0
offset_right = 720.0
offset_bottom = 268.0
metadata/_edit_group_ = true

[node name="Vbox" type="VBoxContainer" parent="Center/Cancel"]
layout_mode = 0
offset_right = 480.0
offset_bottom = 134.0
theme_override_constants/separation = 0

[node name="Title" type="Label" parent="Center/Cancel/Vbox"]
custom_minimum_size = Vector2(0, 67)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Choose Your Destination"
horizontal_alignment = 1
vertical_alignment = 1

[node name="no" type="Button" parent="Center/Cancel/Vbox"]
custom_minimum_size = Vector2(0, 67)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Cancel"

[node name="YesNo" type="Panel" parent="Center"]
visible = false
layout_mode = 0
offset_left = 240.0
offset_top = 134.0
offset_right = 720.0
offset_bottom = 268.0
metadata/_edit_group_ = true

[node name="Vbox" type="VBoxContainer" parent="Center/YesNo"]
layout_mode = 0
offset_right = 480.0
offset_bottom = 134.0
theme_override_constants/separation = 0

[node name="Title" type="Label" parent="Center/YesNo/Vbox"]
custom_minimum_size = Vector2(0, 67)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "End Turn?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Hbox" type="HBoxContainer" parent="Center/YesNo/Vbox"]
custom_minimum_size = Vector2(0, 67)
layout_mode = 2
theme_override_constants/separation = 0

[node name="no" type="Button" parent="Center/YesNo/Vbox/Hbox"]
custom_minimum_size = Vector2(0, 67)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "No"

[node name="yes" type="Button" parent="Center/YesNo/Vbox/Hbox"]
custom_minimum_size = Vector2(0, 67)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Yes"

[node name="Right" type="Control" parent="."]
anchors_preset = 0
offset_left = 1440.0
offset_top = 536.0
offset_right = 1920.0
offset_bottom = 1072.0

[node name="Turn_Order" type="VBoxContainer" parent="Right"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="Label" parent="Right/Turn_Order" instance=ExtResource("2_maujg")]
layout_mode = 2

[connection signal="pressed" from="Center/Cancel/Vbox/no" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="Center/YesNo/Vbox/Hbox/no" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="Center/YesNo/Vbox/Hbox/yes" to="." method="_on_confirm_pressed"]
